<resources>
    <string name="app_name">LabWork2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hero_name">Имя героя: %1$s</string>
    <string name="date_creation">Год создания: %1$s</string>
    <string name="createdBy">Создатель: %1$s</string>
    <string name="team">Команда: %1$s</string>
    <string name="publisher">Издатель: %1$s </string>
    <string name="realName">Настоящее имя: %1$s</string>
    <string name="bio">Биография: %1$s</string>
</resources>