<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingHorizontal="20dp"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="200dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="Назад"/>
            <TextView
                android:id="@+id/tv_name"
                android:text="@string/hero_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_createdBy"
                android:text="@string/createdBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_real_name"
                android:text="@string/realName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_publisher"
                android:text="@string/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_team"
                android:text="@string/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_bio"
                android:text="@string/bio"
                android:scrollbars = "vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>